--- a/Netflix-Movies-and-Guest-Stars.ipynb
+++ b/Netflix-Movies-and-Guest-Stars.ipynb
@@ -6,13 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#First Commit"
+    "#First Commit\n",
+    "years = [2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020]\n",
+    "durations = [103, 101, 99, 100, 100, 95, 95, 96, 93,90]"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
