--- a/Netflix-Movies-and-Guest-Stars.ipynb
+++ b/Netflix-Movies-and-Guest-Stars.ipynb
@@ -1,14 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Netflix! What started in 1997 as a DVD rental service has since exploded into the largest entertainment/media company by market capitalization, boasting over 200 million subscribers as of January 2021.\n",
+    "\n",
+    "Given the large number of movies and series available on the platform, it is a perfect opportunity to flex our data manipulation skills and dive into the entertainment industry. Our friend has also been brushing up on their Python skills and has taken a first crack at a CSV file containing Netflix data. For their first order of business, they have been performing some analyses, and they believe that the average duration of movies has been declining.\n",
+    "\n",
+    "As evidence of this, they have provided us with the following information. For the years from 2011 to 2020, the average movie durations are 103, 101, 99, 100, 100, 95, 95, 96, 93, and 90, respectively.\n",
+    "\n",
+    "If we're going to be working with this data, we know a good place to start would be to probably start working with pandas. But first we'll need to create a DataFrame from scratch. Let's start by creating a Python object covered in Intermediate Python: a dictionary!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#First Commit\n",
+    "# Create the years and durations lists\n",
     "years = [2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020]\n",
-    "durations = [103, 101, 99, 100, 100, 95, 95, 96, 93,90]"
+    "durations = [103, 101, 99, 100, 100, 95, 95, 96, 93, 90]\n",
+    "\n",
+    "# Create a dictionary with the two lists\n",
+    "movie_dict =  {\"years\": years , \"durations\" : durations }\n",
+    "\n",
+    "# Print the dictionary\n",
+    "print(movie_dict)"
    ]
   }
  ],
@@ -19,7 +38,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
   },
   "orig_nbformat": 4
