Filtering the Dataset

--- a/Netflix-Movies-and-Guest-Stars.ipynb
+++ b/Netflix-Movies-and-Guest-Stars.ipynb
@@ -15,66 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (2.1.0)\n",
-      "Requirement already satisfied: numpy>=1.23.2 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (1.25.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.1.2 -> 23.2.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting matplotlib\n",
-      "  Using cached matplotlib-3.7.2-cp311-cp311-win_amd64.whl (7.5 MB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
-      "  Using cached contourpy-1.1.0-cp311-cp311-win_amd64.whl (470 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib)\n",
-      "  Using cached cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
-      "  Using cached fonttools-4.42.1-cp311-cp311-win_amd64.whl (2.1 MB)\n",
-      "Collecting kiwisolver>=1.0.1 (from matplotlib)\n",
-      "  Using cached kiwisolver-1.4.5-cp311-cp311-win_amd64.whl (56 kB)\n",
-      "Requirement already satisfied: numpy>=1.20 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (1.25.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (23.1)\n",
-      "Collecting pillow>=6.2.0 (from matplotlib)\n",
-      "  Using cached Pillow-10.0.0-cp311-cp311-win_amd64.whl (2.5 MB)\n",
-      "Collecting pyparsing<3.1,>=2.3.1 (from matplotlib)\n",
-      "  Using cached pyparsing-3.0.9-py3-none-any.whl (98 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\zethra\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Installing collected packages: pyparsing, pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
-      "Successfully installed contourpy-1.1.0 cycler-0.11.0 fonttools-4.42.1 kiwisolver-1.4.5 matplotlib-3.7.2 pillow-10.0.0 pyparsing-3.0.9\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.1.2 -> 23.2.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install pandas\n",
     "!pip install matplotlib"
@@ -125,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. A visual inspection of our data¶\n",
+    "3. A visual inspection of our data\n",
     "Alright, we now have a pandas DataFrame, the most common way to work with tabular data in Python. Now back to the task at hand. We want to follow up on our friend's assertion that movie lengths have been decreasing over time. A great place to start will be a visualization of the data.\n",
     "\n",
     "Given that the data is continuous, a line plot would be a good choice, with the dates represented along the x-axis and the average length in minutes along the y-axis. This will allow us to easily spot any trends in movie durations. There are many ways to visualize data in Python, but matploblib.pyplot is one of the most common packages to do so.\n",
@@ -144,7 +87,7 @@
     "fig = plt.figure()\n",
     "\n",
     "# Draw a line plot of release_years and durations\n",
-    "plt.plot(durations_df, durations)\n",
+    "plt.plot(years, durations)\n",
     "\n",
     "# Create a title\n",
     "plt.title(\"Netflix Movie Durations 2011-2020\")\n",
@@ -168,43 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  show_id     type  title           director  \\\n",
-      "0      s1  TV Show     3%                NaN   \n",
-      "1      s2    Movie   7:19  Jorge Michel Grau   \n",
-      "2      s3    Movie  23:59       Gilbert Chan   \n",
-      "3      s4    Movie      9        Shane Acker   \n",
-      "4      s5    Movie     21     Robert Luketic   \n",
-      "\n",
-      "                                                cast        country  \\\n",
-      "0  João Miguel, Bianca Comparato, Michel Gomes, R...         Brazil   \n",
-      "1  Demián Bichir, Héctor Bonilla, Oscar Serrano, ...         Mexico   \n",
-      "2  Tedd Chan, Stella Chung, Henley Hii, Lawrence ...      Singapore   \n",
-      "3  Elijah Wood, John C. Reilly, Jennifer Connelly...  United States   \n",
-      "4  Jim Sturgess, Kevin Spacey, Kate Bosworth, Aar...  United States   \n",
-      "\n",
-      "          date_added  release_year  duration  \\\n",
-      "0    August 14, 2020          2020         4   \n",
-      "1  December 23, 2016          2016        93   \n",
-      "2  December 20, 2018          2011        78   \n",
-      "3  November 16, 2017          2009        80   \n",
-      "4    January 1, 2020          2008       123   \n",
-      "\n",
-      "                                         description             genre  \n",
-      "0  In a future where the elite inhabit an island ...  International TV  \n",
-      "1  After a devastating earthquake hits Mexico Cit...            Dramas  \n",
-      "2  When an army recruit is found dead, his fellow...     Horror Movies  \n",
-      "3  In a postapocalyptic world, rag-doll robots hi...            Action  \n",
-      "4  A brilliant group of students become card-coun...            Dramas  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in the CSV as a DataFrame\n",
     "netflix_df = pd.read_csv(\"netflix_data.csv\")\n",
@@ -212,6 +121,41 @@
     "# Print the first five rows of the DataFrame\n",
     "print(netflix_df[0:5])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Filtering for movies!\n",
+    "Okay, we have our data! Now we can dive in and start looking at movie lengths.\n",
+    "\n",
+    "Or can we? Looking at the first five rows of our new DataFrame, we notice a column type. Scanning the column, it's clear there are also TV shows in the dataset! Moreover, the duration column we planned to use seems to represent different values depending on whether the row is a movie or a show (perhaps the number of minutes versus the number of seasons)?\n",
+    "\n",
+    "Fortunately, a DataFrame allows us to filter data quickly, and we can select rows where type is Movie. While we're at it, we don't need information from all of the columns, so let's create a new DataFrame netflix_movies containing only title, country, genre, release_year, and duration.\n",
+    "\n",
+    "Let's put our data subsetting skills to work!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Subset the DataFrame for type \"Movie\"\n",
+    "netflix_df_movies_only = netflix_df[netflix_df['type'] == 'Movie']\n",
+    "\n",
+    "# Select only the columns of interest\n",
+    "netflix_movies_col_subset = netflix_df_movies_only[['title', 'country', 'genre', 'release_year', 'duration']]\n",
+    "\n",
+    "# Print the first five rows of the new DataFrame\n",
+    "print(netflix_movies_col_subset[0:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
