Marking non-feature films

--- a/Netflix-Movies-and-Guest-Stars.ipynb
+++ b/Netflix-Movies-and-Guest-Stars.ipynb
@@ -249,6 +249,30 @@
     "\n",
     "In Python, there are many ways to do this, but one fun way might be to use a loop to generate a list of colors based on the contents of the genre column. Much as we did in Intermediate Python, we can then pass this list to our plotting function in a later step to color all non-typical genres in a different color!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define an empty list\n",
+    "colors = []\n",
+    "\n",
+    "# Iterate over rows of netflix_movies_col_subset\n",
+    "for index, row in netflix_movies_col_subset.iterrows() :\n",
+    "    if row['genre'] == \"Children\" :\n",
+    "        colors.append(\"red\")\n",
+    "    elif row['genre'] == \"Documentaries\" :\n",
+    "        colors.append(\"blue\")\n",
+    "    elif row['genre'] == \"Stand-Up\" :\n",
+    "        colors.append(\"green\")\n",
+    "    else:\n",
+    "        colors.append(\"black\")\n",
+    "        \n",
+    "# Inspect the first 10 values in your list        \n",
+    "print(colors[0:10])"
+   ]
   }
  ],
  "metadata": {
