Are movies getting shorter?

--- a/Netflix-Movies-and-Guest-Stars.ipynb
+++ b/Netflix-Movies-and-Guest-Stars.ipynb
@@ -318,6 +318,20 @@
     "# Show the plot\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Are we certain that movies are getting shorter?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The answer is No. We Disproved the claim of our friend that the average duration of movies has been declining."
+   ]
   }
  ],
  "metadata": {
